--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
